--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
+						<h1>Aben</h1>
 						<nav class="links">
 							<ul>
 								<li><a href="https://www.linkedin.com/in/abenezer-balcha-0594132b6/" target="_blank">LinkedIn</a></li>
