--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Abenezer Landing Page</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -18,7 +18,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Abenezer</h1>
+						<h1>Aben</h1>
 						<nav class="links">
 							<ul>
 								<li><a href="https://www.linkedin.com/in/abenezer-balcha-0594132b6/" target="_blank">LinkedIn</a></li>
