Initial commit with website files

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<li><a href="https://www.linkedin.com/in/abenezer-balcha-0594132b6/" target="_blank">LinkedIn</a></li>
 								<li><a href="https://drive.google.com/file/d/13_CTJ9TSU6qdD9ztSNCXvHJNZU1C2bYJ/view?usp=sharing" target="_blank">Resume</a></li>
 								<li><a href="#">Projects</a></li>
-								<li><a href="#">Contact</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
 						<nav class="main">
