--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 
 <body>
-    <h1>Abenezer Balcha Landing Page</h1>
+    <h1>Abenezer Balcha</h1>
     <div id="links">
         <ul>
             <li><a href="https://www.linkedin.com/in/abenezer-balcha-0594132b6/" target="_blank">LinkedIn</a></li>
