--- a/index.html
+++ b/index.html
@@ -94,6 +94,23 @@
             gap: 50px;
             justify-content: space-around;
         }
+        @media (prefers-color-scheme: dark) {
+    body {
+        background-color: #1A1A1A; /* Dark background color */
+        color: #E0E0E0; /* Light text color */
+    }
+
+    #links {
+        background-color: #333333; /* Darker background for links */
+    }
+
+    #about {
+        background-color: #444444;
+    }
+
+    /* Other styles for dark mode here */
+}
+
     </style>
 </head>
 
