--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         #links a {
             text-decoration: none;
             color: black;
+            transition: transform 0.3s ease;
 
         }
 
