--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         #links a {
             text-decoration: none;
             color: black;
-            transition: transform 0.3s ease;
+            transition: font-weight 0.3s ease, color 0.3s ease;
 
         }
 
