--- a/index.html
+++ b/index.html
@@ -108,26 +108,26 @@
             transform: scale(1.1);
         }
 
-
+/* 
         @media (prefers-color-scheme: dark) {
             body {
                 background-color: #1A1A1A;
                 /* Dark background color */
-                color: #E0E0E0;
+                /*color: #E0E0E0;
                 /* Light text color */
-            }
+           /* }
 
-            #links {
+            /*#links {
                 background-color: #333333;
                 /* Darker background for links */
             }
 
-            #about {
+            /*#about {
                 background-color: #444444;
             }
 
             /* Other styles for dark mode here */
-        }
+       /* } */
     </style>
 </head>
 
