--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Abenezer Balcha">
+    <meta property="og:image" content="https://abenezerbrh.github.io/my-landing-page/images/pic01.jpg">
+    <meta property="og:url" content="https://abenezer-balcha-page.com">
+
     <title>Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
