--- a/index.html
+++ b/index.html
@@ -300,10 +300,16 @@
 </div>
 <section id="projects">
     <h1>My Projects</h1>
+    <div id = "project-list">
     <div id="project-container">
     <img src="images/todo-project.png">
     <a id="project-buttons" href="https://github.com/abenezerbrh/To-do" target="_blank">View Code <img src="images/github.svg"></a>
     <a id="project-buttons" href="https://abenezerbal.pythonanywhere.com/" target="_blank">Try it out <img src="images/rocket.svg"></a>
+    </div>
+    <div id="project-container">
+        <img src="images/word-guess.png">
+        <a id="project-buttons" href="https://github.com/abenezerbrh/word-guessing-game" target="_blank">View Code <img src="images/github.svg"></a>
+        </div>
     </div>
 </section>
 </body>
