--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
         #projects{
             gap: 15px;
         }
+        #project-list {
+            gap: 15px;
+            display: flex;
+            flex-direction: row;
+        }
         #projects img {
             height: 150px;
             width: auto;
