--- a/index.html
+++ b/index.html
@@ -277,37 +277,73 @@
         }
 
         /* Skills */
+        /* ---------- SKILLS SECTION (ICONS VERSION) ---------- */
         #skills {
-            background: var(--bg-1);
-            text-align: center
+            background: linear-gradient(135deg, #1a001f, #4b0082);
+            text-align: center;
+            padding: 100px 20px;
+            color: #fff;
         }
 
         #skills h1 {
-            color: var(--brand);
-            font-size: 2rem;
-            margin-bottom: 1rem
+            font-size: 2.5rem;
+            color: #c77dff;
+            margin-bottom: 10px;
         }
 
-        .skillset {
+        .skills-subtitle {
+            color: #d9c7ff;
+            font-size: 1.1rem;
+            margin-bottom: 50px;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+            gap: 35px;
+            justify-items: center;
+            align-items: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .skill-card {
+            background: #220035;
+            border-radius: 20px;
+            width: 90px;
+            height: 90px;
             display: flex;
-            flex-wrap: wrap;
             justify-content: center;
-            gap: 14px
+            align-items: center;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.25);
         }
 
-        .skill {
-            background: #d1b3ff;
-            color: #150021;
-            border-radius: 10px;
-            padding: 12px 18px;
-            font-weight: 700;
-            transition: .15s ease
+        .skill-card i {
+            font-size: 2.8rem;
+            transition: all 0.3s ease;
         }
 
-        .skill:hover,
-        .skill:focus {
-            transform: scale(1.07);
-            outline: none
+        .skill-card:hover {
+            transform: translateY(-6px) scale(1.08);
+            box-shadow: 0 8px 25px rgba(199, 125, 255, 0.4);
+            background: rgba(255, 255, 255, 0.15);
+        }
+
+        .skill-card:hover i {
+            color: #ffd6e0;
+        }
+
+        /* ---------- RESPONSIVE ---------- */
+        @media (max-width: 600px) {
+            .skill-card {
+                width: 75px;
+                height: 75px;
+            }
+
+            .skill-card i {
+                font-size: 2.2rem;
+            }
         }
 
         /* Projects */
@@ -427,9 +463,9 @@
             color: #2a004f
         }
 
-        /* ---------- CONTACT SECTION: MODERN PURPLE ---------- */
+        /* ---------- CONTACT SECTION: FIXED TWO-COLUMN LAYOUT ---------- */
         .contact-purple {
-            background: linear-gradient(135deg, var(--bg-grad-1), var(--bg-grad-2));
+            background: linear-gradient(135deg, #2a004f, #4b0082);
             color: #ffffff;
             font-family: "Quicksand", sans-serif;
             padding: 100px 20px;
@@ -438,11 +474,9 @@
         .contact-container {
             max-width: 1000px;
             margin: 0 auto;
-            display: flex;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
             gap: 60px;
-            align-items: flex-start;
-            justify-content: space-between;
             background: rgba(255, 255, 255, 0.05);
             padding: 60px 50px;
             border-radius: 20px;
@@ -451,8 +485,9 @@
         }
 
         .contact-info {
-            flex: 1;
-            min-width: 260px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
 
         .contact-info h1 {
@@ -464,25 +499,31 @@
         .contact-info p {
             font-size: 1.05rem;
             color: #f2e9ff;
-            margin-bottom: 30px;
+            margin-bottom: 25px;
+            line-height: 1.6;
         }
 
-        .email-line {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 1rem;
-            color: #e3d7ff;
-        }
-
-        .email-line i {
+        .contact-email {
+            font-size: 1.1rem;
+            font-weight: 600;
             color: #ffd6e0;
+            margin-bottom: 20px;
+        }
+
+        .linkedin-link {
+            font-weight: 600;
+            text-decoration: none;
+            color: #ffffff;
+            transition: color 0.3s ease;
+        }
+
+        .linkedin-link:hover {
+            color: #ffd6e0;
+            text-decoration: underline;
         }
 
         /* ---------- FORM ---------- */
         .contact-form-modern {
-            flex: 1.2;
-            min-width: 300px;
             display: flex;
             flex-direction: column;
             gap: 25px;
@@ -530,10 +571,6 @@
             border-bottom: 2px solid #ffd6e0;
         }
 
-        .full-width {
-            width: 100%;
-        }
-
         .send-btn-modern {
             align-self: flex-start;
             background: #ffd6e0;
@@ -554,23 +591,35 @@
         }
 
         /* ---------- RESPONSIVE ---------- */
-        @media (max-width: 800px) {
+        @media (max-width: 900px) {
             .contact-container {
-                flex-direction: column;
+                grid-template-columns: 1fr;
                 gap: 40px;
                 padding: 40px 25px;
+                text-align: center;
             }
 
-            .contact-info,
-            .contact-form-modern {
-                width: 100%;
+            .contact-info {
+                align-items: center;
             }
 
             .contact-info h1 {
                 font-size: 2rem;
             }
-        }
 
+            .contact-form-modern {
+                align-items: center;
+            }
+
+            .contact-form-modern input,
+            .contact-form-modern textarea {
+                width: 100%;
+            }
+
+            .send-btn-modern {
+                align-self: center;
+            }
+        }
 
 
         /* ---------- RESPONSIVE DESIGN ---------- */
@@ -666,17 +715,65 @@
     <section id="skills" aria-labelledby="skills-title">
         <div class="container">
             <h1 id="skills-title">Skills</h1>
-            <div class="skillset" role="list">
-                <span class="skill" role="listitem">Python</span>
-                <span class="skill" role="listitem">HTML</span>
-                <span class="skill" role="listitem">CSS</span>
-                <span class="skill" role="listitem">C++</span>
-                <span class="skill" role="listitem">C</span>
-                <span class="skill" role="listitem">JavaScript</span>
-                <span class="skill" role="listitem">SQL</span>
+            <p class="skills-subtitle">Tools and technologies I love working with:</p>
+
+            <div class="skills-grid">
+                <!-- Programming Languages -->
+                <div class="skill-card" title="Python">
+                    <i class="devicon-python-plain colored"></i>
+                </div>
+
+                <div class="skill-card" title="C">
+                    <i class="devicon-c-plain colored"></i>
+                </div>
+
+                <div class="skill-card" title="C++">
+                    <i class="devicon-cplusplus-plain colored"></i>
+                </div>
+
+                <div class="skill-card" title="JavaScript">
+                    <i class="devicon-javascript-plain colored"></i>
+                </div>
+
+                <!-- Web Development -->
+                <div class="skill-card" title="HTML5">
+                    <i class="devicon-html5-plain colored"></i>
+                </div>
+
+                <div class="skill-card" title="CSS3">
+                    <i class="devicon-css3-plain colored"></i>
+                </div>
+
+                <div class="skill-card" title="React">
+                    <i class="devicon-react-original colored"></i>
+                </div>
+
+                <!-- Databases -->
+                <div class="skill-card" title="SQL">
+                    <i class="devicon-mysql-plain colored"></i>
+                </div>
+
+                <!-- Version Control -->
+                <div class="skill-card" title="Git">
+                    <i class="devicon-git-plain colored"></i>
+                </div>
+                <div class="skill-card" title="TailwindCSS">
+                    <i class="devicon-tailwindcss-original"></i>
+                </div>
+                <div class="skill-card" title="Nodejs">
+                    <i class="devicon-nodejs-plain"></i>
+                </div>
+                <div class="skill-card" title="Github">
+                    <i class="devicon-github-original"></i>
+                </div>
             </div>
         </div>
     </section>
+
+    <!-- Font Awesome & Devicon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
 
     <!-- PROJECTS -->
     <section id="projects" aria-labelledby="projects-title">
@@ -731,16 +828,20 @@
 
     <section id="contact" class="contact-purple">
         <div class="contact-container">
+
+            <!-- LEFT SIDE -->
             <div class="contact-info">
                 <h1>Contact Me</h1>
                 <p>Ask me anything or just say hi — I’d love to connect.</p>
 
-                <div class="email-line">
-                    <i class="fa-regular fa-envelope"></i>
-                    <span>abenezerbrh@gmail.com</span>
-                </div>
+                <p class="contact-email">abenezerbrh@gmail.com</p>
+
+                <a href="https://www.linkedin.com/in/abenezerbalcha" target="_blank" class="linkedin-link">
+                    Connect with me on LinkedIn →
+                </a>
             </div>
 
+            <!-- RIGHT SIDE (FORM) -->
             <form action="https://formspree.io/f/xvgvzkwy" method="POST" class="contact-form-modern">
                 <div class="form-row">
                     <div class="form-group">
@@ -762,6 +863,7 @@
             </form>
         </div>
     </section>
+
 
     <!-- FontAwesome icons (optional) -->
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
