--- a/index.html
+++ b/index.html
@@ -1718,7 +1718,7 @@
     <!-- Footer - New Addition -->
     <footer>
         <div class="footer-content">
-            <p>© 2025 Abenezer Balcha. Built with <i class="fa-solid fa-hearts"></i>and lots of caffeine.</p>
+            <p>© 2025 Abenezer Balcha. Built with <i class="fa-solid fa-heart"></i> and lots of caffeine.</p>
             <p style="margin-top: 10px; font-size: 12px; opacity: 0.8;">
                 Designed & Developed by Abenezer | <a href="https://github.com/abenezerbrh" target="_blank"
                     rel="noopener">GitHub</a> | <a href="https://www.linkedin.com/in/abenezerbalcha" target="_blank"
@@ -1744,5 +1744,6 @@
         sections.forEach(s => obs.observe(s));
     </script>
 </body>
+
 
 </html>
