Fixed new project card

--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,7 @@
             <div class="projects-grid">
                 <article class="project-card featured">
                     <div class="thumb-wrap">
-                        <span class="badge">Main Project</span>
+                        <span class="badge">React • PostgreSQL</span>
                         <img class="project-img" src="images/wellness.png"
                             alt="Main project placeholder preview" loading="lazy" />
                     </div>
@@ -1718,7 +1718,7 @@
     <!-- Footer - New Addition -->
     <footer>
         <div class="footer-content">
-            <p>© 2025 Abenezer Balcha. Built with <i class="fa-solid fa-hearts"></i>and lots of caffeine.</p>
+            <p>© 2025 Abenezer Balcha. Built with <i class="fa-solid fa-heart"></i> and lots of caffeine.</p>
             <p style="margin-top: 10px; font-size: 12px; opacity: 0.8;">
                 Designed & Developed by Abenezer | <a href="https://github.com/abenezerbrh" target="_blank"
                     rel="noopener">GitHub</a> | <a href="https://www.linkedin.com/in/abenezerbalcha" target="_blank"
