added resume link

--- a/index.html
+++ b/index.html
@@ -1336,13 +1336,16 @@
             <li><a href="#contact">Contact Me</a></li>
         </ul>
         <div class="social-links">
-            <a href="https://github.com/abenezerbrh" target="_blank" rel="noopener" class="social-icon"
+            <a href="https://github.com/abenezerbrh" target="_blank" rel="noopener" title="GitHub Profile" class="social-icon"
                 aria-label="GitHub Profile">
                 <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/abenezerbalcha" target="_blank" rel="noopener" class="social-icon"
+            <a href="https://www.linkedin.com/in/abenezerbalcha" target="_blank" rel="noopener" title="LinkedIn" class="social-icon"
                 aria-label="LinkedIn Profile">
                 <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://drive.google.com/file/d/1zr42w556R_aWiC3lhsdtLDWbJ4KPchQX/view?usp=sharing" target="_blank" rel="noopener" title= "View Resume" class="social-icon" aria-label="Resume">
+                <i class="fas fa-file-alt"></i>
             </a>
         </div>
     </nav>
